--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "udemy-speedup",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css --watch"
+    "build:css": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css",
+    "watch:css": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css --watch"
   },
   "keywords": [],
   "author": "Daniel Rubio",
