--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "udemy-speedup",
   "version": "1.1.3",
   "scripts": {
-    "build:css": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css",
-    "watch:css": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css --watch"
+    "tailwind:build": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css",
+    "tailwind:watch": "npx tailwindcss -i ./popup/input.css -o ./popup/output.css --watch"
   },
   "keywords": [],
   "author": "Daniel Rubio",
