--- a/manifest.json
+++ b/manifest.json
@@ -13,13 +13,13 @@
     }
   },
   "background": {
-    "scripts": ["src/constants.js", "src/background/background.js"]
+    "scripts": ["src/global.js", "src/background/background.js"]
   },
   "content_scripts": [
     {
       "matches": ["https://www.udemy.com/course/*/learn/*"],
       "js": [
-        "src/constants.js",
+        "src/global.js",
         "src/content_scripts/0_selectors.js",
         "src/content_scripts/1_shared.js",
         "src/content_scripts/2_popup_listener.js",
