--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
       "64": "icons/logo-64.png"
     }
   },
+  "options_ui": {
+    "page": "src/popup/settings.html"
+  },
   "background": {
     "scripts": ["src/global.js", "src/background/background.js"]
   },
