--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
     "64": "icons/logo-64.png"
   },
   "browser_action": {
-    "default_popup": "src/popup/popup.html",
+    "default_popup": "src/popup/popup/popup.html",
     "default_icon": {
       "64": "icons/logo-64.png"
     }
   },
   "options_ui": {
-    "page": "src/popup/settings.html"
+    "page": "src/popup/settings/settings.html"
   },
   "background": {
     "scripts": ["src/global.js", "src/background/background.js"]
